# FoldDeck

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.css  App.tsx  BotPanel.tsx  ContextMenu.tsx  Dashboard.tsx  DoctorPanel.tsx  EnvEditor.tsx  GitImportModal.tsx  LogView.tsx  MarkdownView.tsx  MinecraftPanel.tsx  MonitorView.tsx  PackagePanel.tsx  ProjectIcon.tsx  RequestChart.tsx  SettingsPage.tsx  Sidebar.tsx  TerminalView.tsx  audit.ts  main.tsx  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audit.rs  detect.rs  env_file.rs  lib.rs  main.rs  monitor.rs  process.rs  recipes.rs  static_server.rs  terminal.rs
